[package]
name = "runner"
version = "0.1.0"
authors = ["dan <dancrhorton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
y20d12 = { path = "../y20d12" }
y20d11 = { path = "../y20d11" }
y20d10 = { path = "../y20d10" }
y20d9 = { path = "../y20d9" }
y20d8 = { path = "../y20d8" }
y20d7 = { path = "../y20d7" }
y20d6 = { path = "../y20d6" }
y20d5 = { path = "../y20d5" }
y20d4 = { path = "../y20d4" }
y20d3 = { path = "../y20d3" }
y20d2 = { path = "../y20d2" }
y20d1 = { path = "../y20d1" }