[package]
name = "runner"
version = "0.1.0"
authors = ["dan <dancrhorton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
y20d15 = { path = "../y20d15" }
y20d13 = { path = "../y20d13" }
y20d12 = { path = "../y20d12" }
y20d11 = { path = "../y20d11" }
y20d10 = { path = "../y20d10" }
y20d9 = { path = "../y20d9" }
y20d8 = { path = "../y20d8" }
y20d7 = { path = "../y20d7" }
y20d6 = { path = "../y20d6" }
y20d5 = { path = "../y20d5" }
y20d4 = { path = "../y20d4" }
y20d3 = { path = "../y20d3" }
y20d2 = { path = "../y20d2" }
y20d1 = { path = "../y20d1" }
y21d25 = { path = "../y21d25" }
y21d24 = { path = "../y21d24" }
y21d23 = { path = "../y21d23" }
y21d22 = { path = "../y21d22" }
y21d21 = { path = "../y21d21" }
y21d20 = { path = "../y21d20" }
y21d19 = { path = "../y21d19" }
y21d18 = { path = "../y21d18" }
y21d17 = { path = "../y21d17" }
y21d16 = { path = "../y21d16" }
y21d15 = { path = "../y21d15" }
y21d14 = { path = "../y21d14" }
y21d13 = { path = "../y21d13" }
y21d12 = { path = "../y21d12" }
y21d11 = { path = "../y21d11" }
y21d10 = { path = "../y21d10" }
y21d9 = { path = "../y21d9" }
y21d8 = { path = "../y21d8" }
y21d7 = { path = "../y21d7" }
y21d6 = { path = "../y21d6" }
y21d5 = { path = "../y21d5" }
y21d4 = { path = "../y21d4" }
y21d3 = { path = "../y21d3" }
y21d2 = { path = "../y21d2" }
y21d1 = { path = "../y21d1" }